<resources>
    <string name="app_name">Simple Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="times">×</string>
    <string name="equals">=</string>
    <string name="negative">+/-</string>

    <string name="storeA">STO A</string>
    <string name="storeB">STO B</string>
    <string name="recallA">RCL A</string>
    <string name="recallB">RCL B</string>

    <string name="history">Hist</string>
    <string name="decimal">.</string>
    <string name="invert">1/x</string>
    <string name="xsquare">x²</string>
    <string name="xcubed">x³</string>
    <string name="power">^</string>
    <string name="squareroot">√</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="asin">asin<sup><small>-1</small></sup></string>
    <string name="acos">acos<sup><small>-1</small></sup></string>
    <string name="atan">atan<sup><small>-1</small></sup></string>
    <string name="pi">π</string>
    <string name="openPar">(</string>
    <string name="closePar">)</string>

    <string name="display">Enter Your Calculations</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>