<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBackground"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textView"
        android:layout_width="409dp"
        android:layout_height="87dp"
        android:layout_marginTop="236dp"
        android:autofillHints="false"
        android:background="@color/pale"
        android:hint="@string/display"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="374dp"
        android:layout_height="341dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91">

        <Button
            android:id="@+id/zeroBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="105dp"
            android:background="@drawable/button_background"
            android:onClick="zeroBTN"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/twoBTN"
            app:layout_constraintStart_toStartOf="@+id/oneBTN"
            app:layout_constraintTop_toBottomOf="@+id/oneBTN" />

        <Button
            android:id="@+id/equalBTN"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="94dp"
            android:layout_height="112dp"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/orange_rectangle"
            android:onClick="equalBTN"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/decimalBTN"
            app:layout_constraintTop_toBottomOf="@+id/plusBTN" />

        <Button
            android:id="@+id/decimalBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/button_background"
            android:onClick="decimalBTN"
            android:text="@string/decimal"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/zeroBTN"
            app:layout_constraintTop_toBottomOf="@+id/threeBTN" />

        <Button
            android:id="@+id/twoBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/button_background"
            android:onClick="twoTN"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/oneBTN"
            app:layout_constraintTop_toBottomOf="@+id/fiveBTN" />

        <Button
            android:id="@+id/threeBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/button_background"
            android:onClick="threeBTN"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/twoBTN"
            app:layout_constraintTop_toBottomOf="@+id/sixBTN" />

        <Button
            android:id="@+id/oneBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/button_background"
            android:onClick="oneBTN"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/twoBTN"
            app:layout_constraintTop_toBottomOf="@+id/fourBTN"
            tools:layout_editor_absoluteX="-2dp" />

        <Button
            android:id="@+id/sixBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/button_background"
            android:onClick="sixBTN"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/fiveBTN"
            app:layout_constraintTop_toBottomOf="@+id/nineBTN" />

        <Button
            android:id="@+id/fourBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/button_background"
            android:onClick="fourBTN"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/fiveBTN"
            app:layout_constraintTop_toBottomOf="@+id/sevenBTN"
            tools:layout_editor_absoluteX="-2dp" />

        <Button
            android:id="@+id/fiveBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/button_background"
            android:onClick="fiveBTN"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/fourBTN"
            app:layout_constraintTop_toBottomOf="@+id/eightBTN" />

        <Button
            android:id="@+id/plusBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/maroon_rectangle"
            android:onClick="addBTN"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/sixBTN"
            app:layout_constraintTop_toBottomOf="@+id/minusBTN" />

        <Button
            android:id="@+id/sevenBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/button_background"
            android:onClick="sevenBTN"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/eightBTN"
            app:layout_constraintTop_toBottomOf="@+id/clearBTN"
            tools:layout_editor_absoluteX="-2dp" />

        <Button
            android:id="@+id/minusBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/maroon_rectangle"

            android:onClick="minusBTN"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/nineBTN"
            app:layout_constraintTop_toBottomOf="@+id/timesBTN" />

        <Button
            android:id="@+id/eightBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/button_background"
            android:onClick="eightBTN"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/sevenBTN"
            app:layout_constraintTop_toBottomOf="@+id/negativeBTN" />

        <Button
            android:id="@+id/nineBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/button_background"
            android:onClick="nineBTN"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/eightBTN"
            app:layout_constraintTop_toBottomOf="@+id/divideBTN" />

        <Button
            android:id="@+id/divideBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/maroon_rectangle"
            android:onClick="divideBTN"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/negativeBTN"
            app:layout_constraintTop_toBottomOf="@+id/recallABTN" />

        <Button
            android:id="@+id/clearBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/maroon_rectangle"
            android:onClick="clearBTN"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/negativeBTN"
            app:layout_constraintTop_toBottomOf="@+id/storeABTN"
            tools:layout_editor_absoluteX="-2dp" />

        <Button
            android:id="@+id/negativeBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/maroon_rectangle"
            android:onClick="negativeBTN"
            android:text="@string/negative"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/clearBTN"
            app:layout_constraintTop_toBottomOf="@+id/storeBBTN" />

        <Button
            android:id="@+id/timesBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/maroon_rectangle"
            android:onClick="timesBTN"
            android:text="@string/times"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/divideBTN"
            app:layout_constraintTop_toBottomOf="@+id/recallBBTN" />

        <Button
            android:id="@+id/storeABTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/grey_rectangle"
            android:onClick="storeABTN"
            android:text="@string/storeA"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/storeBBTN"
            app:layout_constraintEnd_toStartOf="@+id/storeBBTN"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/storeBBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/grey_rectangle"
            android:onClick="storeBBTN"
            android:text="@string/storeB"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/storeABTN"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/recallABTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/grey_rectangle"
            android:onClick="recallABTN"
            android:text="@string/recallA"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/storeBBTN"
            app:layout_constraintTop_toTopOf="parent
" />

        <Button
            android:id="@+id/recallBBTN"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:background="@drawable/grey_rectangle"
            android:onClick="recallBBTN"
            android:text="@string/recallB"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/recallABTN"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/colorBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="Change Color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

